// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildTrack process a list of tiles for rendering a track using config options {
  startX: 100,
  startY: 100,
  startAngle: 45,
  hPadding: 10,
  vPadding: 20
} 1`] = `
Object {
  "height": 395.56349186104046,
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 4,
      "curved-tile-1" => 4,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "tiles": Array [
    Object {
      "angle": 45,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 100,
      "y": 100,
    },
    Object {
      "angle": 45,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 22.218254069479784,
      "y": 177.78174593052023,
    },
    Object {
      "angle": 135,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -55.56349186104045,
      "y": 177.78174593052023,
    },
    Object {
      "angle": 135,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -133.3452377915607,
      "y": 100.00000000000001,
    },
    Object {
      "angle": 225,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -133.3452377915607,
      "y": 22.218254069479798,
    },
    Object {
      "angle": 225,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -55.563491861040475,
      "y": -55.56349186104045,
    },
    Object {
      "angle": 315,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 22.218254069479755,
      "y": -55.56349186104046,
    },
    Object {
      "angle": 315,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 100,
      "y": 22.21825406947974,
    },
  ],
  "width": 375.56349186104046,
  "x": -204.45436482630058,
  "y": -136.67261889578035,
}
`;

exports[`buildTrack process a list of tiles for rendering a track using config options { hPadding: 10, vPadding: 20 } 1`] = `
Object {
  "height": 350,
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 4,
      "curved-tile-1" => 4,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "tiles": Array [
    Object {
      "angle": 0,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
    Object {
      "angle": 0,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 0,
      "y": 110,
    },
    Object {
      "angle": 90,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -55,
      "y": 165,
    },
    Object {
      "angle": 90,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -165,
      "y": 165,
    },
    Object {
      "angle": 180,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -220,
      "y": 110,
    },
    Object {
      "angle": 180,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -220,
      "y": 0,
    },
    Object {
      "angle": 270,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -165,
      "y": -55.00000000000001,
    },
    Object {
      "angle": 270,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -55,
      "y": -55.00000000000003,
    },
  ],
  "width": 330,
  "x": -275,
  "y": -120.00000000000003,
}
`;

exports[`buildTrack process a list of tiles for rendering a track using config options { startAngle: 45 } 1`] = `
Object {
  "height": 355.56349186104046,
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 4,
      "curved-tile-1" => 4,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "tiles": Array [
    Object {
      "angle": 45,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
    Object {
      "angle": 45,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -77.78174593052022,
      "y": 77.78174593052023,
    },
    Object {
      "angle": 135,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -155.56349186104046,
      "y": 77.78174593052023,
    },
    Object {
      "angle": 135,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -233.3452377915607,
      "y": 1.4210854715202004e-14,
    },
    Object {
      "angle": 225,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -233.3452377915607,
      "y": -77.78174593052022,
    },
    Object {
      "angle": 225,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -155.56349186104046,
      "y": -155.56349186104046,
    },
    Object {
      "angle": 315,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -77.78174593052023,
      "y": -155.56349186104046,
    },
    Object {
      "angle": 315,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 1.4210854715202004e-14,
      "y": -77.78174593052026,
    },
  ],
  "width": 355.56349186104046,
  "x": -294.45436482630055,
  "y": -216.67261889578035,
}
`;

exports[`buildTrack process a list of tiles for rendering a track using config options { startX: 100, startY: 100 } 1`] = `
Object {
  "height": 310,
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 4,
      "curved-tile-1" => 4,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "tiles": Array [
    Object {
      "angle": 0,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 100,
      "y": 100,
    },
    Object {
      "angle": 0,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 100,
      "y": 210,
    },
    Object {
      "angle": 90,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 45,
      "y": 265,
    },
    Object {
      "angle": 90,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -65,
      "y": 265,
    },
    Object {
      "angle": 180,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -120,
      "y": 210,
    },
    Object {
      "angle": 180,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -120.00000000000001,
      "y": 100,
    },
    Object {
      "angle": 270,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -65.00000000000003,
      "y": 44.99999999999999,
    },
    Object {
      "angle": 270,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 44.99999999999997,
      "y": 44.99999999999997,
    },
  ],
  "width": 310,
  "x": -165.00000000000003,
  "y": -2.842170943040401e-14,
}
`;

exports[`buildTrack process a list of tiles for rendering a track using config options { startX: 100, startY: 100, startAngle: 45 } 1`] = `
Object {
  "height": 355.56349186104046,
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 4,
      "curved-tile-1" => 4,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "tiles": Array [
    Object {
      "angle": 45,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 100,
      "y": 100,
    },
    Object {
      "angle": 45,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 22.218254069479784,
      "y": 177.78174593052023,
    },
    Object {
      "angle": 135,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -55.56349186104045,
      "y": 177.78174593052023,
    },
    Object {
      "angle": 135,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -133.3452377915607,
      "y": 100.00000000000001,
    },
    Object {
      "angle": 225,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -133.3452377915607,
      "y": 22.218254069479798,
    },
    Object {
      "angle": 225,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -55.563491861040475,
      "y": -55.56349186104045,
    },
    Object {
      "angle": 315,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 22.218254069479755,
      "y": -55.56349186104046,
    },
    Object {
      "angle": 315,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 100,
      "y": 22.21825406947974,
    },
  ],
  "width": 355.56349186104046,
  "x": -194.45436482630058,
  "y": -116.67261889578035,
}
`;

exports[`buildTrack process a list of tiles for rendering a track using config options {} 1`] = `
Object {
  "height": 310,
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 4,
      "curved-tile-1" => 4,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "tiles": Array [
    Object {
      "angle": 0,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
    Object {
      "angle": 0,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 0,
      "y": 110,
    },
    Object {
      "angle": 90,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -55,
      "y": 165,
    },
    Object {
      "angle": 90,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -165,
      "y": 165,
    },
    Object {
      "angle": 180,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -220,
      "y": 110,
    },
    Object {
      "angle": 180,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -220,
      "y": 0,
    },
    Object {
      "angle": 270,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -165,
      "y": -55.00000000000001,
    },
    Object {
      "angle": 270,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -55,
      "y": -55.00000000000003,
    },
  ],
  "width": 310,
  "x": -265,
  "y": -100.00000000000003,
}
`;

exports[`buildTrack process a list of tiles for rendering a track using default position 1`] = `
Object {
  "height": 310,
  "stats": Counter {
    "counters": Map {
      "straight-tile-1" => 4,
      "curved-tile-1" => 4,
    },
    "notify": [Function],
    "subscribe": [Function],
  },
  "tiles": Array [
    Object {
      "angle": 0,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
    Object {
      "angle": 0,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": 0,
      "y": 110,
    },
    Object {
      "angle": 90,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -55,
      "y": 165,
    },
    Object {
      "angle": 90,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -165,
      "y": 165,
    },
    Object {
      "angle": 180,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -220,
      "y": 110,
    },
    Object {
      "angle": 180,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -220,
      "y": 0,
    },
    Object {
      "angle": 270,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "straight-tile",
      "x": -165,
      "y": -55.00000000000001,
    },
    Object {
      "angle": 270,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
        },
      },
      "ratio": 1,
      "type": "curved-tile",
      "x": -55,
      "y": -55.00000000000003,
    },
  ],
  "width": 310,
  "x": -265,
  "y": -100.00000000000003,
}
`;
